--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -9,6 +9,9 @@
 
 .sidenav {
   padding: 20px;
+  background-color: #fafafa;
+  color: rgba(0, 0, 0, 0.87);
+  font-size: 13px;
 }
 
 .sidenav-content {
