--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,15 +1,12 @@
 <mat-toolbar color="primary">
-    <mat-toolbar-row>
-      <button (click)="drawer.toggle()" mat-icon-button>
-          <mat-icon>reorder</mat-icon>
-      </button>
-    </mat-toolbar-row>
+  <mat-toolbar-row>
+    <button (click)="drawer.toggle()" mat-icon-button>
+      <mat-icon>reorder</mat-icon>
+    </button>
+  </mat-toolbar-row>
 </mat-toolbar>
-
 <mat-drawer-container class="container" autosize>
   <mat-drawer #drawer class="sidenav" mode="side">
-    <p>Auto-resizing sidenav</p>
-    <p>Auto-resizing sidenav</p>
+    <app-menu></app-menu>
   </mat-drawer>
 </mat-drawer-container>
-
