personalização do icones do menu

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -9,4 +9,5 @@
   <mat-drawer #drawer class="sidenav" mode="side">
     <app-menu></app-menu>
   </mat-drawer>
+  <app-body></app-body>
 </mat-drawer-container>
