--- a/src/app/layout/menu/menu.component.css
+++ b/src/app/layout/menu/menu.component.css
@@ -1,7 +1,7 @@
-/* .icon {
-  font-size: 22px;
-  color: #a5a3a8;
-} */
+a.mat-list-item:hover {
+  background-color: #ebebeb;
+  border-radius: 14px;
+}
 
 .icon {
   color: #000;
@@ -13,4 +13,5 @@
 
 .nav-caption {
   margin-left: 8px;
+  color: #403a40;
 }
