--- a/src/app/layout/navbar/navbar.component.css
+++ b/src/app/layout/navbar/navbar.component.css
@@ -9,7 +9,7 @@
 
 .sidenav {
   padding: 20px;
-  background-color: #fafafa;
+  background-color: #f5f4f5;
   color: rgba(0, 0, 0, 0.87);
   font-size: 13px;
 }
