--- a/src/app/layout/menu/menu.component.html
+++ b/src/app/layout/menu/menu.component.html
@@ -1,13 +1,17 @@
 <mat-nav-list>
-    <a mat-list-item href="...">
+    <a mat-list-item [routerLink]="'/'">
+        <mat-icon class="icon" aria-hidden="true">home</mat-icon>
+        <span class="nav-caption">Inicio</span>
+    </a>
+    <a mat-list-item [routerLink]="'times'">
         <mat-icon class="icon" aria-hidden="true">sports_kabaddi</mat-icon>
         <span class="nav-caption">Times</span>
     </a>
-    <a mat-list-item href="...">
+    <a mat-list-item [routerLink]="'campeonato'">
         <mat-icon class="icon" aria-hidden="true">sports_soccer</mat-icon>
         <span class="nav-caption">Campeonatos</span>
     </a>
-    <a mat-list-item href="...">
+    <a mat-list-item [routerLink]="'classificacao'">
         <mat-icon class="icon" aria-hidden="true">table_chart</mat-icon>
         <span class="nav-caption">Tabelas</span>
     </a>
