--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -9,5 +9,5 @@
   <mat-drawer #drawer class="sidenav" mode="side">
     <app-menu></app-menu>
   </mat-drawer>
-  <app-body></app-body>
+  <router-outlet></router-outlet>
 </mat-drawer-container>
