--- a/src/app/layout/menu/menu.component.css
+++ b/src/app/layout/menu/menu.component.css
@@ -15,3 +15,8 @@ a.mat-list-item:hover {
   margin-left: 8px;
   color: #403a40;
 }
+
+.mat-list-item.active {
+  color: red;
+  background-color: aqua;
+}
