--- a/src/app/layout/menu/menu.component.html
+++ b/src/app/layout/menu/menu.component.html
@@ -1,5 +1,5 @@
 <mat-nav-list>
-    <a mat-list-item [routerLink]="['/']" [routerLinkActive]="['active']">
+    <a mat-list-item [routerLink]="['/']">
         <mat-icon class="icon" aria-hidden="true">home</mat-icon>
         <span class="nav-caption">Inicio</span>
     </a>
