--- a/src/app/shared/classificacao/classificacao.component.html
+++ b/src/app/shared/classificacao/classificacao.component.html
@@ -1,77 +1,1 @@
-<div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource">
-        <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-
-        <!-- Position Column -->
-        <ng-container matColumnDef="codigo">
-            <th mat-header-cell *matHeaderCellDef> No. </th>
-            <td mat-cell *matCellDef="let element"> {{element.codigo}} </td>
-        </ng-container>
-
-        <!-- Name Column -->
-        <ng-container matColumnDef="nome">
-            <th mat-header-cell *matHeaderCellDef> Nome </th>
-            <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
-        </ng-container>
-
-        <!-- Weight Column -->
-        <ng-container matColumnDef="pontos">
-            <th mat-header-cell *matHeaderCellDef> PTS </th>
-            <td mat-cell *matCellDef="let element"> {{element.pontos}} </td>
-        </ng-container>
-
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="jogos">
-            <th mat-header-cell *matHeaderCellDef> J </th>
-            <td mat-cell *matCellDef="let element"> {{element.jogos}} </td>
-        </ng-container>
-        <ng-container matColumnDef="vitorias">
-            <th mat-header-cell *matHeaderCellDef> V </th>
-            <td mat-cell *matCellDef="let element"> {{element.vitorias}} </td>
-        </ng-container>
-        <ng-container matColumnDef="empate">
-            <th mat-header-cell *matHeaderCellDef> E </th>
-            <td mat-cell *matCellDef="let element"> {{element.empate}} </td>
-        </ng-container>
-        <ng-container matColumnDef="derrotas">
-            <th mat-header-cell *matHeaderCellDef> D </th>
-            <td mat-cell *matCellDef="let element"> {{element.derrotas}} </td>
-        </ng-container>
-        <ng-container matColumnDef="golsPro">
-            <th mat-header-cell *matHeaderCellDef> GP </th>
-            <td mat-cell *matCellDef="let element"> {{element.golsPro}} </td>
-        </ng-container>
-        <ng-container matColumnDef="golsContra">
-            <th mat-header-cell *matHeaderCellDef> GC </th>
-            <td mat-cell *matCellDef="let element"> {{element.golsContra}} </td>
-        </ng-container>
-        <ng-container matColumnDef="saldoGols">
-            <th mat-header-cell *matHeaderCellDef> SG </th>
-            <td mat-cell *matCellDef="let element"> {{element.saldoGols}} </td>
-        </ng-container>
-        <ng-container matColumnDef="cartaoAmarelo">
-            <th mat-header-cell *matHeaderCellDef> CA </th>
-            <td mat-cell *matCellDef="let element"> {{element.cartaoAmarelo}} </td>
-        </ng-container>
-        <ng-container matColumnDef="cartaoVermelho">
-            <th mat-header-cell *matHeaderCellDef> CV </th>
-            <td mat-cell *matCellDef="let element"> {{element.cartaoVermelho}} </td>
-        </ng-container>
-        <ng-container matColumnDef="aproveitamento">
-            <th mat-header-cell *matHeaderCellDef> % </th>
-            <td mat-cell *matCellDef="let element"> {{element.aproveitamento}} </td>
-        </ng-container>
-        <ng-container matColumnDef="ultimosJogos">
-            <th mat-header-cell *matHeaderCellDef> UltimosJogos </th>
-            <td mat-cell *matCellDef="let element"> {{element.ultimosJogos}} </td>
-        </ng-container>
-        <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef> Status </th>
-            <td mat-cell *matCellDef="let element"> {{element.status}} </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="colunasExibidas"></tr>
-        <tr mat-row *matRowDef="let row; columns: colunasExibidas;"></tr>
-    </table>
-    <mat-paginator [pageSizeOptions]="[1, 3, 5]" showFirstLastButtons></mat-paginator>
-</div>
+<h1>classificacao works!</h1>
