--- a/src/app/views/pages/campeonato/campeonato.component.html
+++ b/src/app/views/pages/campeonato/campeonato.component.html
@@ -1,25 +1,29 @@
 <div class="row">
 	<div class="col-xl-8">
 		<kt-portlet [class]="'kt-portlet--height-fluid'">
-			<kt-portlet-header [title]="'Lista de times'"
+			<kt-portlet-header [title]="'Lista de campeonatos'"
 				[class]="'kt-portlet__head--lg kt-portlet__head--noborder kt-portlet__head--break-sm'">
+				<ng-container ktPortletTools>
+					<kt-context-menu2></kt-context-menu2>
+				</ng-container>
 			</kt-portlet-header>
 			<kt-portlet-body [class]="'kt-portlet__body--fit'">
 				<div class="example-header">
 					<mat-form-field>
 						<mat-label>Pesquisar</mat-label>
-						<input class="filtrar" matInput (keyup)="applyFilter($event)" placeholder="Ex. Times" #input>
+						<input class="filtrar" matInput (keyup)="applyFilter($event)" placeholder="Ex. Campeonatos"
+							#input>
 					</mat-form-field>
 				</div>
-					<div perfectScrollbar [ngStyle]="{'max-height': '43vh', 'position': 'relative'}"
+				<div perfectScrollbar [ngStyle]="{'max-height': '43vh', 'position': 'relative'}"
 					class="mat-table__wrapper mat-table__wrapper--dashboard mb-4">
 					<div class="lmat-elevation-z8">
 						<table mat-table [dataSource]="dataSource" matSort>
 
 							<!-- ID Column -->
-							<ng-container matColumnDef="codigoTime">
+							<ng-container matColumnDef="codigoCampeonato">
 								<th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-								<td mat-cell *matCellDef="let row"> {{row.codigoTime}} </td>
+								<td mat-cell *matCellDef="let row"> {{row.codigoCampeonato}} </td>
 							</ng-container>
 
 							<!-- Progress Column -->
