--- a/src/app/views/partials/layout/context-menu2/context-menu2.component.html
+++ b/src/app/views/partials/layout/context-menu2/context-menu2.component.html
@@ -1,16 +1,16 @@
 <div ngbDropdown [placement]="'bottom-right'" class="dropdown">
 	<a ngbDropdownToggle href="javascript:;" class="btn btn-label-brand btn-bold btn-sm dropdown-toggle">
-		Export
+		Criar
 	</a>
 	<div ngbDropdownMenu class="dropdown-menu dropdown-menu-fit">
 		<ul class="kt-nav">
 			<li class="kt-nav__section kt-nav__section--first">
-				<span class="kt-nav__section-text">Choose an action:</span>
+				<span class="kt-nav__section-text">Escolha uma ação:</span>
 			</li>
 			<li class="kt-nav__item">
 				<a href="javascript:;" class="kt-nav__link">
 					<i class="kt-nav__link-icon flaticon2-graph-1"></i>
-					<span class="kt-nav__link-text">Export</span>
+					<span class="kt-nav__link-text">Campeonato</span>
 				</a>
 			</li>
 			<li class="kt-nav__item">
