--- a/src/app/views/pages/campeonato/campeonato.component.html
+++ b/src/app/views/pages/campeonato/campeonato.component.html
@@ -4,7 +4,7 @@
 			<kt-portlet-header [title]="'Lista de campeonatos'"
 				[class]="'kt-portlet__head--lg kt-portlet__head--noborder kt-portlet__head--break-sm'">
 				<ng-container ktPortletTools>
-					<kt-context-menu2></kt-context-menu2>
+					<kt-menu-texto></kt-menu-texto>
 				</ng-container>
 			</kt-portlet-header>
 			<kt-portlet-body [class]="'kt-portlet__body--fit'">
